--- a/dangky.html
+++ b/dangky.html
@@ -21,7 +21,7 @@
                 <li class="hover:text-yellow-300"><a href="/gioithieu.html">GIỚI THIỆU</a></li>
                 <i class="fa-solid fa-xmark text-2xl md:hidden" onclick="closeMenu()"></i>
             </ul>
-            <div class="button w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
+            <div onclick="url()" class="button cursor-pointer w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
             <i class="fa-solid fa-bars text-2xl md:hidden text-[#FFFFFF]" onclick="openMenu()"></i>
         </div>
     </header>
@@ -35,10 +35,16 @@
         <p class="my-5"><strong>Đăng ký Vui123</strong>  tặng 68k chơi trải nghiệm nhà cái. Anh em game thủ chỉ cần cung cấp đầy đủ các thông tin chính xác theo yêu cầu từ hệ thống của nhà cái là có thể đăng ký với những trải nghiệm chất lượng nhất. Vui123 Asia hướng dẫn chi tiết anh em đăng ký tài khoản tại nhà cái Vui123.</p>
         <h2 class="font-bold text-xl 2xl:text-2xl my-5">Link đăng ký Vui123 mới nhất 2024</h2>
         <p>Những link đăng ký Vui123 mới nhất:</p>
-        <div class="grid grid-cols-3 my-5 gap-2">
-            <div class="link bg-yellow-400 p-3 rounded-md"><a class="text-red-600 underline " href="">Link 1</a></div>
-            <div class="link bg-yellow-400 p-3 rounded-md"><a class="text-red-600 underline " href="">Link2</a></div>
-            <div class="link bg-yellow-400 p-3 rounded-md"><a class="text-red-600 underline " href="">Link 3</a></div>
+        <div class="grid grid-cols-3 my-5 gap-2 *:bg-yellow-400 *:p-3 *:rounded-md *:text-center font-bold text-red-500 *:cursor-pointer">
+            <div class="link" onclick="url()">
+                Link 1
+            </div>
+            <div class="link" onclick="url()">
+                Link 2
+            </div>
+            <div class="link" onclick="url()">
+                Link 3
+            </div>
         </div>
         <p>Vui123 là một trong những nhà cái chất lượng được cung cấp bởi Bong88 nên rất chỉnh chu và uy tín. Tuy nhiên rất nhiều bạn muốn truy cập vào trang chủ nhà cái nhưng lại băn khoăn và lo sợ. </p>
         <p class="my-5">Nhanh chóng nắm bắt được vấn đề nhà cái đã cho ra đời những tên miền khác nhau cùng việc thiết kế web sao cho dễ nhận biết nhất. Đặc biệt số lượng người tham gia mỗi ngày, mỗi giờ cực khùng nên tình trạng quá tải diễn ra thường xuyên.</p>
