--- a/gamevui.html
+++ b/gamevui.html
@@ -21,7 +21,7 @@
                 <li class="hover:text-yellow-300"><a href="/gioithieu.html">GIỚI THIỆU</a></li>
                 <i class="fa-solid fa-xmark text-2xl md:hidden" onclick="closeMenu()"></i>
             </ul>
-            <div class="button w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
+            <div onclick="url()" class="button cursor-pointer w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
             <i class="fa-solid fa-bars text-2xl md:hidden text-[#FFFFFF]" onclick="openMenu()"></i>
         </div>
     </header>
@@ -30,8 +30,8 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 my-3">
             <div class="img"><a href="/gamevui1.html"><img class=" h-full" src="gamevui/p3.jfif" alt=""></a></div>
             <div class="cap p-4 flex flex-col bg-cyan-50">
-                <h3 class="font-bold text-xl my-3 hover:text-red-600"><a href="/gamevui1.html">Đá Gà GA28 – Tham Gia Cá Độ Đá Gà Uy Tín</a></h3>
-                <p>Đá gà GA28 là thương hiệu không còn xa lạ đối với những người chơi đam mê. Đây là địa chỉ nhiều người tham gia và tin tưởng để tìm kiếm những trận đá gà đỉnh cao. Thương hiệu này từ khi mới ra đời đến nay vẫn luôn gây sốt trên thị trường</p>
+                <h3 class="font-bold text-xl my-3 hover:text-red-600"><a href="/gamevui1.html">Đá Gà VUI123 – Tham Gia Cá Độ Đá Gà Uy Tín</a></h3>
+                <p>Đá gà VUI123 là thương hiệu không còn xa lạ đối với những người chơi đam mê. Đây là địa chỉ nhiều người tham gia và tin tưởng để tìm kiếm những trận đá gà đỉnh cao. Thương hiệu này từ khi mới ra đời đến nay vẫn luôn gây sốt trên thị trường</p>
                 <a class="w-32 h-8 mt-7 border-2 border-green-600 text-center text-green-500 hover:bg-green-600 hover:text-white rounded-md" href="/gamevui1.html">Xem thêm <i class="fa-solid fa-arrow-right"></i></a>
             </div>
         </div>
