--- a/gamevui1.html
+++ b/gamevui1.html
@@ -21,56 +21,56 @@
                 <li class="hover:text-yellow-300"><a href="/gioithieu.html">GIỚI THIỆU</a></li>
                 <i class="fa-solid fa-xmark text-2xl md:hidden" onclick="closeMenu()"></i>
             </ul>
-            <div class="button w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
+            <div onclick="url()" class="button cursor-pointer w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
             <i class="fa-solid fa-bars text-2xl md:hidden text-[#FFFFFF]" onclick="openMenu()"></i>
         </div>
     </header>
     <div class="banner w-full bg-cover bg-center" style="background-image: url(gamevui/p6.jpg);">
         <div class="bg-gray-900 w-full flex flex-col opacity-85 p-16">
             <div class="btn w-28 h-8 bg-green-700 text-center py-2 text-sm font-bold text-white rounded-md hover:bg-green-500 ease-in-out duration-150 m-auto"><a href="">GAME VUI</a></div>
-            <h1 class="my-5 text-2xl xl:text-3xl font-bold text-white text-center">Đá Gà GA28 – Tham Gia Cá Độ Đá Gà Uy Tín</h1>
+            <h1 class="my-5 text-2xl xl:text-3xl font-bold text-white text-center">Đá Gà VUI123 – Tham Gia Cá Độ Đá Gà Uy Tín</h1>
         </div>
     </div>
     <div class="container-box w-full xl:w-4/5 2xl:w-2/5 m-auto my-5 p-3 xl:p-0 flex flex-col">
-        <p class="my-5"><strong>Đá gà GA28</strong>  là thương hiệu không còn xa lạ đối với những người chơi đam mê. Đây là địa chỉ nhiều người tham gia và tin tưởng để tìm kiếm những trận đá gà đỉnh cao. Thương hiệu này từ khi mới ra đời đến nay vẫn luôn gây sốt trên thị trường. Cùng chúng tôi đi sâu khám phá thêm về sân chơi này qua những nội dung cơ bản dưới đây nhé. </p>
-        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Tìm hiểu về sảnh đá gà GA28</h2>
-        <p>GA28 là điểm đến không thể bỏ qua cho những ai đam mê game đấu kê. Với một lịch sử dài từ những ngày đầu tiên trên thị trường, thương hiệu đã khẳng định vị thế của mình bằng sự thu hút hàng triệu người chơi.</p>
+        <p class="my-5"><strong>Đá gà VUI123</strong>  là thương hiệu không còn xa lạ đối với những người chơi đam mê. Đây là địa chỉ nhiều người tham gia và tin tưởng để tìm kiếm những trận đá gà đỉnh cao. Thương hiệu này từ khi mới ra đời đến nay vẫn luôn gây sốt trên thị trường. Cùng chúng tôi đi sâu khám phá thêm về sân chơi này qua những nội dung cơ bản dưới đây nhé. </p>
+        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Tìm hiểu về sảnh đá gà VUI123</h2>
+        <p>VUI123 là điểm đến không thể bỏ qua cho những ai đam mê game đấu kê. Với một lịch sử dài từ những ngày đầu tiên trên thị trường, thương hiệu đã khẳng định vị thế của mình bằng sự thu hút hàng triệu người chơi.</p>
         <p class="my-5">Sân chơi luôn không ngừng nâng cao chất lượng dịch vụ để đáp ứng nhu cầu của thành viên và trải nghiệm. Kho game đồ sộ và ưu đãi hấp dẫn luôn là điểm nhấn thu hút hàng triệu người tham gia mỗi ngày. </p>
-        <p>Hơn nữa, hệ thống bảo mật của GA28 được xây dựng với sự chú trọng tối đa vào sự an toàn và bảo mật. Vậy nên anh em sẽ luôn cảm thấy yên tâm hơn khi tham gia các trò cược mà không phải lo lắng về vấn đề an ninh thông tin cá nhân. Sảnh cược đã từng bước khẳng định mình là một trong những địa chỉ uy tín và chất lượng nhất, mang đến hàng ngàn kèo đấu mỗi ngày.</p>
+        <p>Hơn nữa, hệ thống bảo mật của VUI123 được xây dựng với sự chú trọng tối đa vào sự an toàn và bảo mật. Vậy nên anh em sẽ luôn cảm thấy yên tâm hơn khi tham gia các trò cược mà không phải lo lắng về vấn đề an ninh thông tin cá nhân. Sảnh cược đã từng bước khẳng định mình là một trong những địa chỉ uy tín và chất lượng nhất, mang đến hàng ngàn kèo đấu mỗi ngày.</p>
         <img class="my-5" src="gamevui/p6.jpg" alt="">
-        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Những thông tin cơ bản về đá gà GA28</h2>
-        <p>Để than gia chơi <strong> đá gà GA28</strong>, bạn hãy nhanh chóng học hỏi thêm những kinh nghiệm đơn giản dưới đây: </p>
+        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Những thông tin cơ bản về đá gà VUI123</h2>
+        <p>Để than gia chơi <strong> đá gà VUI123</strong>, bạn hãy nhanh chóng học hỏi thêm những kinh nghiệm đơn giản dưới đây: </p>
         <h2 class="font-bold text-xl 2xl:text-2xl my-5">Thể lệ đặt cược</h2>
         <p>Khi tham gia đặt cược, mỗi thành viên cần phải biết về cách bật trạng thái cược trên hệ thống. Nếu không, việc đặt cược sẽ không thực hiện chấp nhận. Để tránh những phiền toái không mong muốn, hãy chắc chắn kiểm tra trạng thái cược trước khi bắt đầu.</p>
         <p class="my-5">Một khi đã đặt cược, không có lựa chọn hủy bỏ khi thời gian hết hiệu lực. Đồng thời, nếu không có ai cược vào Meron hoặc Wala trong trận đấu, tỷ lệ cược mặc định sẽ là 1. Tiền cược vẫn được tính dựa trên kết quả của trận đấu giữa Meron và Wala. bạn cần nghiên cứu về tỉ lệ hai bên để cược hiệu quả nhất. </p>
         <p>Tỷ lệ đặt cược phụ thuộc vào từng nhà cái, nhưng nhìn chung, quy định giữa cửa Meron là nhỏ hơn 1, tức là khoảng 0,8-0,95 là cho bên được thách đấu. Còn đối với bên cược có tỉ lệ Wala là bên thách đấu, bạn sẽ được hưởng tỉ lệ từ 1.</p>
         <img class="my-5" src="gamevui/p7.jpg" alt="">
-        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Quy ước trận đấu hòa trong Đá gà GA28</h2>
-        <p>Tại GA28, tỷ lệ cược hòa 1:8 vô cùng hấp dẫn, có tỉ lệ như vậy là vì khả năng chiến thắng không lớn. Một trận đấu sẽ được coi là hòa nếu xảy ra một trong những trường hợp sau:</p>
+        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Quy ước trận đấu hòa trong Đá gà VUI123</h2>
+        <p>Tại VUI123, tỷ lệ cược hòa 1:8 vô cùng hấp dẫn, có tỉ lệ như vậy là vì khả năng chiến thắng không lớn. Một trận đấu sẽ được coi là hòa nếu xảy ra một trong những trường hợp sau:</p>
         <ul class="list-disc p-5">
             <li>Trong trận đấu, chiến kê vờn mà không có đập, đá đòn hoặc mổ xảy ra ở cả hai phía.</li>
             <li>Không có phân thắng bại được tuyên bố trong vòng 10 phút kể từ lần mổ đầu tiên.</li>
             <li>Hai con đều gục ngã, mất khả năng thi đấu và không tiếp tục trận đấu được.</li>
         </ul>
         <h2 class="font-bold text-xl 2xl:text-2xl my-5">Quy ước hủy trận đấu</h2>
-        <p>Trong một số trường hợp, trận đấu <strong>Đá gà GA28</strong>  có thể bị hủy bỏ và tiền cược sẽ được hoàn trả cho người chơi. Các quy định cụ thể về việc hủy trận đấu mà thành viên cần nắm chắc như sau:</p>
+        <p>Trong một số trường hợp, trận đấu <strong>Đá gà VUI123</strong>  có thể bị hủy bỏ và tiền cược sẽ được hoàn trả cho người chơi. Các quy định cụ thể về việc hủy trận đấu mà thành viên cần nắm chắc như sau:</p>
         <ul class="list-disc p-5">
             <li>Nếu đường truyền trực tiếp không ổn định, gây ra sự cố không thể phát trận đấu, thì trận đấu sẽ bị hủy.</li>
             <li>Nếu gà đứng sai vị trí, quy ước băng màu đỏ là đội chủ nhà và băng màu trắng hoặc xanh là đội khách. Trong trường hợp này, trận đấu cũng sẽ bị hủy.</li>
             <li>Nếu tên của trận đấu hoặc tên của chiến kê hiển thị không chính xác, trận đấu sẽ không được công nhận.</li>
         </ul>
-        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Học hỏi những kinh nghiệm đá gà GA28</h2>
-        <p>Sau đây là những kinh nghiệm đơn giản mà nhiều người tham gia chơi <strong>đá gà GA28</strong>  đơn giản nhất: </p>
+        <h2 class="font-bold text-xl 2xl:text-2xl my-5">Học hỏi những kinh nghiệm đá gà VUI123</h2>
+        <p>Sau đây là những kinh nghiệm đơn giản mà nhiều người tham gia chơi <strong>đá gà VUI123</strong>  đơn giản nhất: </p>
         <ul class="list-disc p-5">
             <li>Tìm hiểu về kèo đấu: Khi đặt cược, quan trọng là phải hiểu rõ về các kèo đấu. Từ đó sẽ giúp bạn đưa ra quyết định đúng đắn và hiệu quả để chiến thắng.</li>
             <li>Quản lý tiền cược: Anh em cần đặt ra một chiến lược cược phù hợp với túi tiền của bạn. Điều này giúp bạn kiểm soát tốt tiền cược và đảm bảo tài chính của mình qua các ván chơi. </li>
-            <li>Lựa chọn uy tín: Trong số nhiều nhà cái cung cấp sảnh đá gà trực tuyến, hãy chọn lựa những nhà cái uy tín như GA28. Tránh những trang web giả mạo, lừa đảo để tránh những trải nghiệm không mong muốn và bảo vệ tiền chính bản thân mình.</li>
+            <li>Lựa chọn uy tín: Trong số nhiều nhà cái cung cấp sảnh đá gà trực tuyến, hãy chọn lựa những nhà cái uy tín như VUI123. Tránh những trang web giả mạo, lừa đảo để tránh những trải nghiệm không mong muốn và bảo vệ tiền chính bản thân mình.</li>
             <li>Xem xét chiến kê: Bạn hãy quan sát vóc dáng, hình thái của chiến kê và tham gia chinh chiến, con chiến kê nào mạnh mẽ hơn sẽ có khả năng thắng cao hơn.</li>
             <li>Hãy học hỏi thêm kinh nghiệm từ những tay chơi thường xuyên tham gia đá gà để có lợi thế cho mình và học hỏi được nhiều chiến thuật đấu kê hay. </li>
         </ul>
         <img class="my-5" src="gamevui/p8.jpg" alt="">
         <h2 class="font-bold text-xl 2xl:text-2xl my-5">Lời kết</h2>
-        <p>Sảnh <strong>đá gà GA28</strong>  là một cổng game cá cược chất lượng được nhiều người lựa chọn giải trí mỗi ngày. <a class="text-red-600 underline font-bold" href="">Vui123</a> mong rằng bạn có thêm lựa chọn tại sân chơi để có thể tham gia chơi hiệu quả và chiến thắng cho mình. </p>
+        <p>Sảnh <strong>đá gà VUI123</strong>  là một cổng game cá cược chất lượng được nhiều người lựa chọn giải trí mỗi ngày. <a class="text-red-600 underline font-bold" href="">Vui123</a> mong rằng bạn có thêm lựa chọn tại sân chơi để có thể tham gia chơi hiệu quả và chiến thắng cho mình. </p>
     </div>
     <div class="footer w-full bg-zinc-600 p-5">
         <div class="grid grid-cols-1  md:grid-cols-3 w-full xl:w-4/5 2xl:w-1/2 m-auto gap-10 ">
