--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li class="hover:text-yellow-300"><a href="/gioithieu.html">GIỚI THIỆU</a></li>
                 <i class="fa-solid fa-xmark text-2xl md:hidden" onclick="closeMenu()"></i>
             </ul>
-            <div class="button w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
+            <div onclick="url()" class="button cursor-pointer w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
             <i class="fa-solid fa-bars text-2xl md:hidden text-[#FFFFFF]" onclick="openMenu()"></i>
         </div>
     </header>
@@ -32,9 +32,9 @@
         <p class="text-red-600 font-bold italic text-center text-lg my-5">Đăng Ký Vui123 Tặng 100k Từ Trang Chủ Vui123.life Trang Nhà Cái Mới Vui123 Casino Tại Thị Trường Việt Nam</p>
         <img class="w-full p-5" src="image/image1.jfif" alt="">
         <div class="btn-box grid grid-cols-2 md:grid-cols-3 gap-5 md:gap-8 my-8 w-full">
-           <a class=" h-10 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700" href="">Đăng Ký</a>
-           <a class=" h-10 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700" href="">Đăng Nhập</a>
-           <a class=" h-10 col-span-2 md:col-span-1 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700" href="">Tặng 100K</a>
+           <div class=" h-10 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700 cursor-pointer" onclick="url()">Đăng Ký</div>
+           <div class=" h-10 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700 cursor-pointer" onclick="url()">Đăng Nhập</div>
+           <div class=" h-10 col-span-2 md:col-span-1 bg-red-600 font-bold text-white text-center pt-2 rounded-md hover:bg-red-700 cursor-pointer" onclick="url()">Tặng 100K</div>
         </div>
         <div class="image-box flex justify-between w-full my-5 gap-5 2xl:gap-16">
             <div class="img w-4/12"><img src="image/image2.png" alt=""></div>
