--- a/gamevui3.html
+++ b/gamevui3.html
@@ -21,7 +21,7 @@
                 <li class="hover:text-yellow-300"><a href="/gioithieu.html">GIỚI THIỆU</a></li>
                 <i class="fa-solid fa-xmark text-2xl md:hidden" onclick="closeMenu()"></i>
             </ul>
-            <div class="button w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
+            <div onclick="url()" class="button cursor-pointer w-[130px] md:w-1/6 h-8 sm:h-10 bg-red-600 font-bold text-sm md:text-xs lg:text-sm text-white text-center py-1 sm:py-3 rounded-md hover:bg-yellow-500 ease-in-out duration-300 flex justify-center items-center"><a href=""><i class="fa-solid fa-thumbs-up"></i>  Đăng Ký</a></div>
             <i class="fa-solid fa-bars text-2xl md:hidden text-[#FFFFFF]" onclick="openMenu()"></i>
         </div>
     </header>
